# projetcpp

./: .gitignore
TP1_donzeaua_lavechim/: CMakeLists.txt  README.txt
TP1_donzeaua_lavechim/old/: README.txt
TP1_donzeaua_lavechim/src/: CMakeLists.txt  Dvector.cpp  Dvector.h  GerstnerWave.cpp  GerstnerWave.h  GerstnerWaveModel.cpp  GerstnerWaveModel.h  Height.cpp  Height.h  Ocean.cpp  Ocean.h  PhilipsWaveModel.cpp  PhilipsWaveModel.h  Vector.h  Vector.tpp  WaveModel.cpp  WaveModel.h  height_test.cpp  main.cpp  main.cxx  mainGerstner.cxx  mainPhilips.cxx  ocean.hxx  testConstructeurs.cpp  testVertices.cpp  vecteur.txt
TP1_donzeaua_lavechim/src/Visu_template/: main.cxx
TP1_donzeaua_lavechim/src/ocean/: CMakeLists.txt  window.cxx  window.hxx
TP1_donzeaua_lavechim/tests/: CMakeLists.txt  calcul_matriciel.cpp  testConstructeurs.cpp  testFFT.cpp  testFile2.txt  testGerstnerWaveModel.cpp  testHeight.cpp  testOcean.cpp  testOperateurs.cpp  testOperatorEgal.cpp  testPhilips.cpp  testVector.cpp  testVectorConstructeurComplex.cpp  testVectorConstructeurDouble.cpp  testVectorOperatorComplex.cpp  testVectorOperatorDouble.cpp  testVertices.cpp  vecteur.txt  vecteur5.txt
